refactor(quiterss): update shortcuts

--- a/roles/quiterss/files/QuiteRss.ini
+++ b/roles/quiterss/files/QuiteRss.ini
@@ -13,6 +13,8 @@ filterName=filterNewsUnread_
 [Shortcuts]
 copyLinkAct=Ctrl+C
 markFeedRead=Ctrl+R
+openDescriptionNewsAct=
+openInExternalBrowserAct=Return
 
 [Settings]
 alternatingColorsNews=true
