--- a/roles/emacs/tasks/main.yml
+++ b/roles/emacs/tasks/main.yml
@@ -7,6 +7,8 @@
   vars:
     package_apt_add_facts:
       - 'emacs27'
+      - 'graphviz'
+      - 'sqlite3'
 
 - import_tasks: '{{ helpers }}/template.yml'
   vars:
