--- a/roles/albert/tasks/main.yml
+++ b/roles/albert/tasks/main.yml
@@ -1,11 +1,20 @@
-- name: 'install package'
+- name: 'add apt key'
   become: True
-  apt:
-    deb: 'https://download.opensuse.org/repositories/home:/manuelschneid3r/xUbuntu_20.04/amd64/albert_0.16.4-0_amd64.deb'
-  register: 'apt_deb_result'
-  until: 'not apt_deb_result.failed'
-  retries: 10
-  delay: 10
+  apt_key:
+    url: 'https://download.opensuse.org/repositories/home:manuelschneid3r/xUbuntu_20.04/Release.key'
+  tags: 'albert_add_key'
+
+- import_tasks: '{{ helpers }}/repo.yml'
+  vars:
+    repo_facts:
+      - repo: 'deb https://download.opensuse.org/repositories/home:/manuelschneid3r/xUbuntu_20.04/ /'
+        filename: 'home:manuelschneid3r.list'
+  tags: 'repo_albert'
+
+- import_tasks: '{{ helpers }}/package_apt_add.yml'
+  vars:
+    package_apt_add_facts:
+      - 'albert'
 
 - import_tasks: '{{ helpers }}/template.yml'
   vars:
