--- a/helpers/package_apt_remove.yml
+++ b/helpers/package_apt_remove.yml
@@ -1,6 +1,6 @@
 - name: 'helper | package_apt_remove | create task variable'
   set_fact:
-    package_list: '{{ q("items", package_apt_remove_facts) }}'
+    helper_package_apt_remove_list: '{{ q("items", package_apt_remove_facts) }}'
 
 - name: 'helper | package_apt_remove | remove package'
   become: True
@@ -10,4 +10,4 @@
     name: '{{ item }}'
     state: 'absent'
     autoremove: True
-  loop: '{{ package_list }}'
+  loop: '{{ helper_package_apt_remove_list }}'
