--- a/helpers/latest_release.yml
+++ b/helpers/latest_release.yml
@@ -1,7 +1,3 @@
-- name: 'helper | latest_release | create task variable'
-  set_fact:
-    helper_latest_release_result: []
-
 - name: 'helper | latest_release | get release data'
   uri:
     url: |-
@@ -17,9 +13,10 @@
 
 - name: 'helper | latest_release | create task variable'
   set_fact:
-    helper_latest_release_result: |-
+    helper_latest_release_result: |
       {{
         helper_latest_release_result
+        | default([])
         + [{
             'id': role_name,
             'url': item
