feat(starship): add starship role

--- a/playbook.yml
+++ b/playbook.yml
@@ -50,6 +50,7 @@
     - 'redshift'
     - 'rsnapshot'
     - 'simplescreenrecorder'
+    - 'starship'
     - 'sublime'
     - 'svgo'
     - 'synaptic'
