--- a/roles/firefox/tasks/torbrowser.yml
+++ b/roles/firefox/tasks/torbrowser.yml
@@ -1,19 +1,11 @@
-- import_tasks: '{{ helpers }}/tempfile.yml'
-  tags: 'tempfile_torbrowser'
-
-- name: 'torbrowser | get release file'
-  get_url:
-    url: 'https://aus1.torproject.org/torbrowser/update_3/release/Linux_x86_64-gcc3/x/en-US'
-    dest: '{{ helper_tempfile_result }}'
-  register: 'get_url_result'
-  until: 'not get_url_result.failed'
-  retries: 10
-  delay: 10
-  tags: 'torbrowser_get_url'
+- import_tasks: '{{ helpers }}/get_url.yml'
+  vars:
+    get_url_facts:
+      - url: 'https://aus1.torproject.org/torbrowser/update_3/release/Linux_x86_64-gcc3/x/en-US'
 
 - name: 'torbrowser | get app version'
   xml:
-    path: '{{ get_url_result.dest }}'
+    path: '{{ helper_get_url_result }}'
     xpath: '/updates/update'
     content: 'attribute'
   register: 'xml_result'
