--- a/roles/starship/tasks/main.yml
+++ b/roles/starship/tasks/main.yml
@@ -2,12 +2,14 @@
   vars:
     get_url_facts:
       - url: 'https://starship.rs/install.sh'
+  tags: 'starship_update'
 
 - name: 'run install script'
   become: True
   script: '{{ helper_get_url_result }} --yes'
   args:
     executable: 'bash'
+  tags: 'starship_update'
 
 - import_tasks: '{{ helpers }}/copy.yml'
   vars:
