refactor(common): delete hypnotix

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -15,6 +15,7 @@
       - 'gnote'
       - 'hexchat-common'
       - 'hexchat'
+      - 'hypnotix'
       - 'libreoffice-draw'
       - 'libreoffice-impress'
       - 'libreoffice-ogltrans'
