--- a/roles/cinnamon/tasks/main.yml
+++ b/roles/cinnamon/tasks/main.yml
@@ -7,6 +7,8 @@
         dest: '{{ cinnamon_config_path }}/window-list@cinnamon.org'
       - src: '26.json'
         dest: '{{ cinnamon_config_path }}/calendar@cinnamon.org'
+      - src: 'collapsible-systray@feuerfuchs.eu.json'
+        dest: '{{ cinnamon_config_path }}/collapsible-systray@feuerfuchs.eu'
       - src: 'power@cinnamon.org.json'
         dest: '{{ cinnamon_config_path }}/power@cinnamon.org'
       - src: 'workspace-grid@hernejj.json'
