refactor(sync): update sync directories

--- a/roles/keepassxc/templates/cache.ini
+++ b/roles/keepassxc/templates/cache.ini
@@ -1,7 +1,7 @@
 [General]
-LastActiveDatabase={{ sync_directory }}/{{ data.filename }}
-LastDatabases={{ sync_directory }}/{{ data.filename }}
-LastDir={{ sync_directory }}
+LastActiveDatabase={{ keepassxc_dir }}/{{ data.filename }}
+LastDatabases={{ keepassxc_dir }}/{{ data.filename }}
+LastDir={{ keepassxc_dir }}
 
 [GUI]
 ListViewState="@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x1\x1\0\0\0\xe\0\0\0\0\0\0\0\x3\0\0\0\x4\0\0\0\x5\0\0\0\x6\0\0\0\a\0\0\0\b\0\0\0\t\0\0\0\n\0\0\0\v\0\0\0\x1\0\0\0\f\0\0\0\x2\0\0\0\r\0\0\0\xe\0\0\0\0\0\0\0\n\0\0\0\f\0\0\0\x1\0\0\0\x2\0\0\0\x3\0\0\0\x4\0\0\0\x5\0\0\0\x6\0\0\0\a\0\0\0\b\0\0\0\t\0\0\0\v\0\0\0\r\0\0\0\xe\xe7?\0\0\0\f\0\0\0\b\0\0\0\x7f\0\0\0\v\0\0\0\x64\0\0\0\n\0\0\0\x18\0\0\0\x5\0\0\0\x7f\0\0\0\x4\0\0\0\xbf\0\0\0\a\0\0\0\x64\0\0\0\x6\0\0\0\x64\0\0\0\0\0\0\0\x64\0\0\0\x3\0\0\0\x64\0\0\0\r\0\0\0\x64\0\0\0\f\0\0\0\x18\0\0\0\t\0\0\0\x64\0\0\x2=\0\0\0\xe\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\0\0\0\x18\0\0\0\x81\0\0\0\0\0\0\0\xe\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\x1\x1f\0\0\0\x1\0\0\0\0\0\0\x1\x1e\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8\x1\0\0\0\x64)"
