refactor(lollypop): update config

--- a/roles/lollypop/tasks/main.yml
+++ b/roles/lollypop/tasks/main.yml
@@ -10,9 +10,15 @@
         value: 'true'
       - key: '/org/gnome/Lollypop/cover-size'
         value: '170'
+      - key: '/org/gnome/Lollypop/cs-api-key'
+        value: '""'
       - key: '/org/gnome/Lollypop/dark-ui'
         value: 'true'
       - key: '/org/gnome/Lollypop/disable-scrobbling'
+        value: 'true'
+      - key: '/org/gnome/Lollypop/fade'
+        value: 'false'
+      - key: '/org/gnome/Lollypop/force-single-column'
         value: 'true'
       - key: '/org/gnome/Lollypop/music-uris'
         value: '["file://{{ user_storage }}/music"]'
@@ -28,4 +34,8 @@
         value: 'false'
       - key: '/org/gnome/Lollypop/transitions'
         value: 'false'
+      - key: '/org/gnome/Lollypop/shown-album-lists'
+        value: '[-11, -8]'
+      - key: '/org/gnome/Lollypop/window-size'
+        value: '[800, 650]'
   tags: 'dconf_lollypop'
