refactor(dconf): update settings

--- a/roles/cinnamon/defaults/main.yml
+++ b/roles/cinnamon/defaults/main.yml
@@ -117,8 +117,8 @@ cinnamon_settings:
     value: 'true'
   - key: '/org/cinnamon/settings-daemon/peripherals/mouse/motion-acceleration'
     value: '10.0'
-  - key: '/org/cinnamon/desktop/session/idle-delay'
-    value: 'uint32 0'
+  - key: '/org/cinnamon/desktop/privacy/remember-recent-files'
+    value: 'false'
   - key: '/org/cinnamon/desktop/screensaver/idle-activation-enabled'
     value: 'false'
   - key: '/org/cinnamon/desktop/screensaver/show-clock'
@@ -133,6 +133,8 @@ cinnamon_settings:
     value: 'false'
   - key: '/org/cinnamon/desktop/screensaver/floating-widgets'
     value: 'false'
+  - key: '/org/cinnamon/desktop/session/idle-delay'
+    value: 'uint32 0'
   - key: '/org/cinnamon/panels-height'
     value: '["1:30"]'
   - key: '/org/cinnamon/panel-zone-icon-sizes'
