chore(vscodium): update settings

--- a/roles/vscodium/templates/settings.json
+++ b/roles/vscodium/templates/settings.json
@@ -103,6 +103,7 @@
   "extensions.autoUpdate": false,
   "extensions.ignoreRecommendations": true,
   "extensions.showRecommendationsOnlyOnDemand": true,
+  "files.defaultLanguage": "${activeEditorLanguage}",
   "files.exclude": {
     "**/.git": true,
     "**/*.log": true,
