refactor(svgo): update config file

--- a/roles/svgo/tasks/main.yml
+++ b/roles/svgo/tasks/main.yml
@@ -8,7 +8,7 @@
 - import_tasks: '{{ helpers }}/copy.yml'
   vars:
     copy_facts:
-      - src: '.svgo.yml'
+      - src: 'svgo.config.js'
         dest: '{{ user_config }}/svgo'
   tags: 'copy_svgo'
 
