refactor(vscodium): update settings and keybindings

--- a/roles/vscodium/templates/settings.json
+++ b/roles/vscodium/templates/settings.json
@@ -48,6 +48,8 @@
   "cSpell.userWords": [
     "repo"
   ],
+  "css.hover.documentation": false,
+  "css.hover.references": false,
   "css.validate": false,
   "debug.javascript.codelens.npmScripts": "never",
   "editor.accessibilitySupport": "off",
@@ -68,6 +70,7 @@
   "editor.fontSize": 16,
   "editor.formatOnSave": true,
   "editor.glyphMargin": false,
+  "editor.hover.delay": 100,
   "editor.lineHeight": 26,
   "editor.lineNumbers": "off",
   "editor.linkedEditing": true,
@@ -113,14 +116,17 @@
   },
   "html.format.templating": true,
   "html.format.wrapAttributes": "force-aligned",
+  "html.hover.documentation": false,
+  "html.hover.references": false,
   "javascript.updateImportsOnFileMove.enabled": "always",
   "javascript.validate.enable": false,
-  "less.validate": false,
   "markdown.preview.fontFamily": "{{ user_font }}, monospace",
   "markdown.preview.fontSize": 16,
   "problems.showCurrentInStatus": true,
   "python.formatting.provider": "yapf",
   "python.pythonPath": "{{ ansible_playbook_python }}",
+  "scss.hover.documentation": false,
+  "scss.hover.references": false,
   "scss.validate": false,
   "search.location": "panel",
   "search.showLineNumbers": true,
