refactor(insomnia): update pattern and config dir

--- a/roles/insomnia/tasks/main.yml
+++ b/roles/insomnia/tasks/main.yml
@@ -3,7 +3,7 @@
     latest_release_facts:
       owner: 'Kong'
       repo: 'insomnia'
-      pattern: 'Insomnia\.Designer.*deb$'
+      pattern: 'Insomnia.*deb$'
   tags: 'update_insomnia'
 
 - name: 'install package'
