--- a/roles/network_manager/tasks/main.yml
+++ b/roles/network_manager/tasks/main.yml
@@ -16,7 +16,9 @@
     ipv6.dns '2606:4700:4700::1111 2606:4700:4700::1001'
     ipv6.ignore-auto-dns yes
     ipv6.ip6-privacy 1
-  when: 'nm_wired_name not in nm_connection'
+  when:
+    - 'nm_wired_name not in nm_connection'
+    - 'q("lines", "nmcli -t device") | select("search", ":ethernet")'
 
 - name: 'add hotspot connection'
   command: |
