refactor(rsnapshot): update directories list

--- a/roles/rsnapshot/tasks/main.yml
+++ b/roles/rsnapshot/tasks/main.yml
@@ -20,6 +20,8 @@
           - '{{ user_storage }}/org/'
           - '{{ user_storage }}/picture/'
           - '{{ user_storage }}/video/'
+          - '{{ user_storage }}/vms/mac'
+          - '{{ user_storage }}/vms/win'
   tags: 'template_rsnapshot'
 
 - import_tasks: '{{ helpers }}/alias.yml'
