refactor(vscodium): update settings

--- a/roles/vscodium/templates/settings.json
+++ b/roles/vscodium/templates/settings.json
@@ -125,6 +125,8 @@
   "problems.showCurrentInStatus": true,
   "python.formatting.provider": "yapf",
   "python.pythonPath": "{{ ansible_playbook_python }}",
+  "quokka.showOutputOnStart": false,
+  "quokka.showStartViewOnFeatureRelease": false,
   "scss.hover.documentation": false,
   "scss.hover.references": false,
   "scss.validate": false,
