--- a/roles/network_manager/defaults/main.yml
+++ b/roles/network_manager/defaults/main.yml
@@ -2,3 +2,9 @@ nm_hostname: '{{ ansible_hostname | to_uuid() | truncate(4, True, "") }}'
 nm_wired_name: 'wired_{{ nm_hostname }}'
 nm_hotspot_name: 'hotspot_{{ nm_hostname }}'
 nm_connection: '{{ lookup("pipe", "nmcli -t connection") }}'
+
+nm_settings:
+  - key: '/org/gnome/nm-applet/disable-connected-notifications'
+    value: 'true'
+  - key: '/org/gnome/nm-applet/disable-disconnected-notifications'
+    value: 'true'
