--- a/roles/network_manager/tasks/main.yml
+++ b/roles/network_manager/tasks/main.yml
@@ -35,3 +35,8 @@
     ipv6.method shared
     ipv6.ip6-privacy 1
   when: 'nm_hotspot_name not in nm_connection'
+
+- import_tasks: '{{ helpers }}/dconf.yml'
+  vars:
+    dconf_facts: '{{ nm_settings }}'
+  tags: 'dconf_network_manager'
