--- a/roles/vscodium/templates/settings.json
+++ b/roles/vscodium/templates/settings.json
@@ -62,6 +62,7 @@
   "editor.colorDecorators": false,
   "editor.copyWithSyntaxHighlighting": false,
   "editor.cursorBlinking": "phase",
+  "editor.cursorSmoothCaretAnimation": true,
   "editor.cursorSurroundingLines": 4,
   "editor.cursorWidth": 2,
   "editor.foldingStrategy": "indentation",
@@ -71,6 +72,7 @@
   "editor.formatOnSave": true,
   "editor.glyphMargin": false,
   "editor.hover.delay": 1000,
+  "editor.lightbulb.enabled": false,
   "editor.lineHeight": 26,
   "editor.lineNumbers": "off",
   "editor.linkedEditing": true,
@@ -92,6 +94,7 @@
   "editor.tabCompletion": "on",
   "editor.tabSize": 2,
   "editor.unfoldOnClickAfterEndOfLine": true,
+  "editor.wordSeparators": "`~!@#$%^&*()-_=+[{]}\\|;:'\",.<>/?",
   "editor.wordWrap": "on",
   "emmet.includeLanguages": {
     "javascript": "javascriptreact",
@@ -99,6 +102,7 @@
     "jsx-attr": "javascriptreact"
   },
   "eslint.format.enable": true,
+  "explorer.compactFolders": false,
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
   "explorer.openEditors.visible": 0,
