--- a/roles/font/tasks/main.yml
+++ b/roles/font/tasks/main.yml
@@ -9,7 +9,7 @@
     latest_release_facts:
       owner: 'be5invis'
       repo: 'iosevka'
-      pattern: 'ttf((?!fixed|unhinted).)*ss08'
+      pattern: 'super-ttc(.)*ss08'
   tags:
     - 'latest_release_font'
     - 'update_font'
