--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 ansible_managed = "- DO NOT EDIT - see template in "
-callback_whitelist = profile_roles, profile_tasks, timer
-duplicate_dict_key = True
+callback_enabled = profile_roles, profile_tasks, timer
+duplicate_dict_key = ignore
 inventory = hosts.yml
 log_path = ~/.ansible/ansible.log
 nocows = True
